--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/traverse": "^7.9.0",
     "@babel/types": "^7.9.0",
     "babylon": "^6.18.0",
-    "ejs": "^3.0.1"
+    "ejs": "^3.0.1",
+    "tapable": "^1.1.3"
   }
 }
